--- a/meta.html
+++ b/meta.html
@@ -11,17 +11,17 @@
 <meta name="title" content="Заголовок страницы для поискового робота" />
 <meta name="description" content="Описание страницы" />
 <meta name="keywords" content="Ключевые слова страницы" />
-<meta name="author" content="Mr.TRYBOI" />
-<meta name="copyright" content="Mr.TRYBOI" />
+<meta name="author" content="" />
+<meta name="copyright" content="" />
  
-<link rel="author" href="https://plus.google.com/109204770438362277341" />
-<link rel="publisher" href="https://plus.google.com/109204770438362277341" />
+<link rel="author" href="https://plus.google.com/" />
+<link rel="publisher" href="https://plus.google.com/" />
  
 <meta property="og:title" content="Заголовок страницы для соц. сетей" />
-<meta property="og:url" content="http://www.tryboi.com" />
+<meta property="og:url" content="http://www..com" />
 <meta property="og:image" content="images/logo-200x200.png" />
 <meta property="og:description" content="Описание страницы для соц. сетей" />
-<meta property="og:site_name" content="tryboi.com" />
+<meta property="og:site_name" content=".com" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="uk_UA" />
 <meta property="og:locale:alternate" content="ru_RU" />
@@ -31,4 +31,4 @@
 <meta name="twitter:site" content="Имя Twitter аккаунта" />
 <meta name="twitter:title" content="Заголовок страницы для Twitter" />
 <meta name="twitter:description" content="Описание страницы для Twitter" />
-<meta name="twitter:url" content="http://www.tryboi.com" />
+<meta name="twitter:url" content="http://www..com" />
