--- a/meta.html
+++ b/meta.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
-<title>Заголовок страницы для пользователя</title>
+
+<title></title>
  
 <meta name="viewport" content="width=device-width" />
 <meta name="robots" content="index, follow" />
@@ -8,27 +9,27 @@
 <meta http-equiv="content-language" content="ru" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
  
-<meta name="title" content="Заголовок страницы для поискового робота" />
-<meta name="description" content="Описание страницы" />
-<meta name="keywords" content="Ключевые слова страницы" />
+<meta name="title" content="" />
+<meta name="description" content="" />
+<meta name="keywords" content="" />
 <meta name="author" content="" />
 <meta name="copyright" content="" />
  
-<link rel="author" href="https://plus.google.com/" />
+<link rel="author" href="https://plus.google.com/" /> 
 <link rel="publisher" href="https://plus.google.com/" />
  
-<meta property="og:title" content="Заголовок страницы для соц. сетей" />
-<meta property="og:url" content="http://www..com" />
-<meta property="og:image" content="images/logo-200x200.png" />
-<meta property="og:description" content="Описание страницы для соц. сетей" />
-<meta property="og:site_name" content=".com" />
+<meta property="og:title" content="" />
+<meta property="og:url" content="" />
+<meta property="og:image" content="" />
+<meta property="og:description" content="" />
+<meta property="og:site_name" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:locale" content="uk_UA" />
-<meta property="og:locale:alternate" content="ru_RU" />
+<meta property="og:locale" content="ru_RU" />
+<meta property="og:locale:alternate" content="uk_UA" />
 <meta property="og:locale:alternate" content="en_US" />
  
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="Имя Twitter аккаунта" />
-<meta name="twitter:title" content="Заголовок страницы для Twitter" />
-<meta name="twitter:description" content="Описание страницы для Twitter" />
-<meta name="twitter:url" content="http://www..com" />
+<meta name="twitter:site" content="@Twitter" />
+<meta name="twitter:title" content="" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:url" content="" />
